--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
 <body>
     <header>
-        <h1 class="title">Taylor Gehrts's Portfolio Site</h1>
         <nav>
-            <ul>
-                <li> <a href="#about">about</a></li>
-                <li>work</li>
-                <li>contact</li>
+            <ul class="nav-list">
+                <li class="nav-item">Taylor/Gehrts' Web Portfolio</li>
+                <li class="nav-item"> <a href="#about">about</a></li>
+                <li class="nav-item"> <a href="#work">work</a></li>
+                <li class="nav-item"> <a href="#contact">contact</a></li>
             </ul>
         </nav>
     </header>
