--- a/index.html
+++ b/index.html
@@ -24,14 +24,37 @@
     </header>
 
     <section id="about">
-        <img src="./assets/images/IMG-3874.JPG" alt="AI generated Image of Taylor Gehrts" class="bio-image">
         <h2>About</h2>
+        <img src="./assets/images/IMG-3874.JPG" alt="AI generated Image of Taylor Gehrts" class="bio-image">
         <p>Taylor Gehrts has been working in technology in one way or another since 2015 when he co-founded Mordax
             Systems, a small boutique synthesizer company. Since then he has managed resturants and bars, helping with
             internal systems and managing people. He is currently enroled in a web development bootcamp through the
             University of Oregon. His interests include making electronic music, cooking and taking care of his two
             cats. </p>
     </section>
+
+
+    <h2 class="workhead">Selected work</h2>
+    <div id="work" class="container">
+        
+        <div class="card">
+            <img src="./assets/images/IMG-3874.JPG" alt=" placeholder">
+        </div>
+
+        <div class="card">
+            <img src="./assets/images/IMG-3874.JPG" alt=" placeholder" class="cardimg">
+        </div>
+        <div class="card">
+            <img src="./assets/images/IMG-3874.JPG" alt=" placeholder" class="cardimg">
+        </div>
+
+    </div>
+
+    <div id="contact">
+        <h2 class="workhead">Contact</h2>
+
+
+    </div>
 </body>
 
 </html>
