added full structure to html, CSS overhaul to work with flex, need to delete redundent and broken code

--- a/index.html
+++ b/index.html
@@ -35,26 +35,45 @@
 
 
     <h2 class="workhead">Selected work</h2>
-    <div id="work" class="container">
-        
-        <div class="card">
-            <img src="./assets/images/IMG-3874.JPG" alt=" placeholder">
+    <div id="work" class="container1">
+        <div class="cardnew">
+            <div class="cap">
+                Refactoring project
+            </div>
+            <a href="https://taylorgehrts.github.io/challenge_1/"><img src="./assets/images/screenshot.png" alt="refactoring website project" class="workimage1"></a>
+            
         </div>
+    </div>
 
+    <div class="container">
         <div class="card">
-            <img src="./assets/images/IMG-3874.JPG" alt=" placeholder" class="cardimg">
+            <div class="cap">
+                css
+            </div>
+            <a href="https://taylorgehrts.github.io/challenge_1/"><img src="./assets/images/Screenshot 2023-05-10 at 1.42.17 PM.png" alt="CSS code snippet code along example" class="workimageall"></a>
         </div>
         <div class="card">
-            <img src="./assets/images/IMG-3874.JPG" alt=" placeholder" class="cardimg">
+            <div class="cap">
+                html
+            </div>
+            <a href="https://taylorgehrts.github.io/challenge_1/"><img src="./assets/images/prework.png" alt="CSS code snippet code along example" class="workimageall"></a>
         </div>
+        <div class="card">
+            <div class="cap">
+                Coming soon
+            </div>
+        </div>
+    </div>
+    <div id="contact"></div>
+    <h2 class="workhead">Contact</h2>
+    <div class="contact">
+        <ul class="contactlist">
+            <li><a class="contactli" href = "mailto: taylorgehrts@gmail.com">Taylorgehrts@gmail.com</a></li>
+            <li> <a class="contactli" href="https://github.com/taylorgehrts">GitHub</a></li>
+        </ul>
 
     </div>
 
-    <div id="contact">
-        <h2 class="workhead">Contact</h2>
-
-
-    </div>
 </body>
 
 </html>
