Finished mvp and added comments to css and html

--- a/index.html
+++ b/index.html
@@ -5,58 +5,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taylor Gehrts</title>
+    <title>Taylor Gehrts Portfolio</title>
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 
 <body>
+    <!--Header and Navigation menu-->
     <header>
         <nav>
             <ul class="nav-list">
-                <li class="nav-item">Taylor/Gehrts' Web Portfolio</li>
+                <li class="nav-item">Taylor/Gehrts Portfolio</li>
                 <li class="nav-item"> <a href="#about">about</a></li>
                 <li class="nav-item"> <a href="#work">work</a></li>
                 <li class="nav-item"> <a href="#contact">contact</a></li>
             </ul>
         </nav>
     </header>
-
+    <!--About section-->
     <section id="about">
         <h2>About</h2>
         <img src="./assets/images/IMG-3874.JPG" alt="AI generated Image of Taylor Gehrts" class="bio-image">
-        <p>Taylor Gehrts has been working in technology in one way or another since 2015 when he co-founded Mordax
-            Systems, a small boutique synthesizer company. Since then he has managed resturants and bars, helping with
-            internal systems and managing people. He is currently enroled in a web development bootcamp through the
+        <p>Taylor Gehrts has been working in technology in one way or another since 2015 when he co-founded <a
+                href="https://www.mordax.net">Mordax Systems</a>
+            , a small boutique synthesizer company. Since then he has managed restaurants and bars, helping with
+            internal systems and managing people. He is currently enrolled in a web development bootcamp through the
             University of Oregon. His interests include making electronic music, cooking and taking care of his two
             cats. </p>
     </section>
 
-
+    <!--Selected work-->
     <h2 class="workhead">Selected work</h2>
     <div id="work" class="container1">
         <div class="cardnew">
             <div class="cap">
                 Refactoring project
             </div>
-            <a href="https://taylorgehrts.github.io/challenge_1/"><img src="./assets/images/screenshot.png" alt="refactoring website project" class="workimage1"></a>
-            
+            <a href="https://taylorgehrts.github.io/challenge_1/"><img src="./assets/images/screenshot.png"
+                    alt="refactoring website project" class="workimage1"></a>
         </div>
     </div>
 
     <div class="container">
         <div class="card">
             <div class="cap">
-                css
+                Code Snippet Code Along
             </div>
-            <a href="https://taylorgehrts.github.io/challenge_1/"><img src="./assets/images/Screenshot 2023-05-10 at 1.42.17 PM.png" alt="CSS code snippet code along example" class="workimageall"></a>
+            <a href=" https://taylorgehrts.github.io/CSS_Snippets/"><img
+                    src="./assets/images/Screenshot 2023-05-10 at 1.42.17 PM.png"
+                    alt="CSS code snippet code along example" class="workimageall"></a>
         </div>
         <div class="card">
             <div class="cap">
-                html
+                Pre-work Study Guide
             </div>
-            <a href="https://taylorgehrts.github.io/challenge_1/"><img src="./assets/images/prework.png" alt="CSS code snippet code along example" class="workimageall"></a>
+            <a href="https://taylorgehrts.github.io/prework-study-guide/"><img src="./assets/images/prework.png"
+                    alt="screenshoot of pre-work study guide made for course" class="workimageall"></a>
         </div>
         <div class="card">
             <div class="cap">
@@ -64,16 +69,22 @@
             </div>
         </div>
     </div>
+
+    <!--Contact Section-->
     <div id="contact"></div>
     <h2 class="workhead">Contact</h2>
     <div class="contact">
         <ul class="contactlist">
-            <li><a class="contactli" href = "mailto: taylorgehrts@gmail.com">Taylorgehrts@gmail.com</a></li>
+            <li><a class="contactli" href="mailto: taylorgehrts@gmail.com">Taylorgehrts@gmail.com</a></li>
             <li> <a class="contactli" href="https://github.com/taylorgehrts">GitHub</a></li>
         </ul>
 
     </div>
 
+    <!--Simple Footer-->
+    <footer>
+        <p>Made by Taylor Gehrts Copyright 2023</p>
+    </footer>
 </body>
 
 </html>
