Finalized html, updated colors in css, added images, updated readME

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             </ul>
         </nav>
     </header>
+
+    <img src="./assets/images/hero.png" alt="backgound image of colored vertical lines" class="hero">
     <!--About section-->
     <section id="about">
         <h2>About</h2>
@@ -67,6 +69,8 @@
             <div class="cap">
                 Coming soon
             </div>
+            <a href="#work"><img src="./assets/images/coming soon.png"
+                alt="Placeholder image of colored shapes that says coming soon" class="workimageall"></a>
         </div>
     </div>
 
