updated content to add newest project

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
         </div>
         <div class="card">
             <div class="cap">
-                Coming soon
+                Whats on hand - cocktail search tool
             </div>
-            <a href="#work"><img src="./assets/images/coming soon.png"
-                    alt="Placeholder image of colored shapes that says coming soon" class="workimageall"></a>
+            <a href="https://quagsire369.github.io/Group-Project-1/"><img src="./assets/images/CocktailappScreenshot.png"
+                    alt="Screen shot from cocktail app" class="workimageall"></a>
         </div>
     </div>
 
