updated to include project 2

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     <div id="work" class="container1">
         <div class="cardnew">
             <div class="cap">
-                Refactoring project
+                Kiddo Kare Babysitting app
             </div>
-            <a href="https://taylorgehrts.github.io/challenge_1/"><img src="./assets/images/screenshot.png"
-                    alt="refactoring website project" class="workimage1"></a>
+            <a href="https://hidden-eyrie-72629-9ca91495354a.herokuapp.com/"><img src="./assets/images/Screenshot 2023-08-18 at 9.47.16 AM.png"
+                    alt="Kiddo Kare - babysitting app" class="workimage1"></a>
         </div>
     </div>
 
